--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,21 +9,47 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        sourcemod-version: [1.11-dev]
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - ubuntu-20.04
+
+        sourcemod-version:
+          - 1.11-dev
+
         include:
           - os: ubuntu-latest
-            target-archs: x86,x86_64
+            target-archs: x86
+            compiler_cc: clang
+            compiler_cxx: clang++
 
           - os: windows-latest
-            target-archs: x86,x86_64
+            target-archs: x86
+            compiler_cc: msvc
+
+          - os: ubuntu-20.04
+            target-archs: x86
+            compiler_cc: clang-8
+            compiler_cxx: clang++-8
 
     steps:
-      - name: Install Linux packages
+      - name: Install ${{ matrix.os }} packages
         if: runner.os == 'Linux'
         run: |
-          sudo apt update
-          sudo apt install -yq --no-install-recommends g++-multilib
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            gcc-multilib g++-multilib libstdc++6 lib32stdc++6 \
+            libc6-dev libc6-dev-i386 linux-libc-dev \
+            linux-libc-dev:i386 lib32z1-dev ${{ matrix.compiler_cc }}
+
+      - name: Select compiler
+        if: runner.os == 'Linux'
+        run: |
+          echo "CC=${{ matrix.compiler_cc }}" >> $GITHUB_ENV
+          echo "CXX=${{ matrix.compiler_cxx }}" >> $GITHUB_ENV
+          ${{ matrix.compiler_cc }} --version
+          ${{ matrix.compiler_cxx }} --version
 
       - name: Setup Python 3.8
         uses: actions/setup-python@v4
@@ -67,10 +93,10 @@ jobs:
           python ../configure.py --enable-optimize --targets=${{ matrix.target-archs }}
           ambuild
 
-      - name: Upload artifact
+      - name: Upload artifact ${{ matrix.os }}
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ runner.os }}
+          name: ${{ matrix.os }}
           path: extension/build/package
 
 
@@ -79,6 +105,13 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - ubuntu-20.04
 
     steps:
       - name: Download artifacts
@@ -87,8 +120,7 @@ jobs:
       - name: Package
         run: |
           version=`echo $GITHUB_REF | sed "s/refs\/tags\///"`
-          7z a clown-core-${version}.${{ github.run_number }}-linux.zip ./Linux/*
-          7z a clown-core-${version}.${{ github.run_number }}-windows.zip ./Windows/*
+          7z a clown-core-${version}.${{ github.run_number }}-${{ matrix.os }}.zip ./${{ matrix.os }}/*
 
       - name: Release
         uses: svenstaro/upload-release-action@v2
